# trading-game

./: README.md  pyproject.toml
data/: btc_days.pickle
